# CodeArena

./: .gitignore  README.md  RUN_CODEARENA.ps1  STOP_CODEARENA.ps1  local_runner.py
backend/: CMakeLists.txt  main.cpp
data/: problems.json
frontend/: app.js  index.html  styles.css
samples/problem1/: input2.txt  input3.txt
samples/problem2/: input3.txt
samples/problem3/: input1.txt  input3.txt
